# driftline

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test.py
.github/ISSUE_TEMPLATE/: bug.md  design.md
alembic/: env.py
alembic/versions/: 00e992abb1fb_fix_explanation_unique_constraint.py  2141a264d77d_add_version_column_to_explanations.py  40c1f4008d24_add_usage_events_table.py  47adeecb18bc_add_incident_explanation_relationship.py  76a8fcc65b7d_remove_explanation_id_from_incidents.py  7cf8c06ff110_add_explanation_versioning.py  8864e6262fbc_add_orgs_table_and_org_id_to_incidents.py  94419ed33487_add_explanation_id_to_incidents.py  985ec6155758_add_explanation_key_column_to_.py  bb4932deabe1_remove_fingerprint_uniqueness_constraint.py  d1acb77a7dec_add_unique_constraint_to_explanation_key.py  d7c10f66fbcf_make_risk_assessment_id_nullable_on_.py  d9fccea4c7fa_add_cascade_delete_to_explanations_.py  de261962b87e_add_last_explained_tier_to_incidents.py  (+5 more)
app/: main.py
app/db/: base.py  (+1 more)
cli/: check.py  clarify.py  finalize.py  init.py  install_hook.py  main.py
docs/: ANTI_GOALS.md  ARCHITECTURE.md  DEMO.md  FAQ.md  INCIDENT_LIFECYCLE.md  INVARIANTS.md  OPERATOR_PLAYBOOK.md  PITCH.md  SCOPE_FREEZE.md  SECURITY_MODEL.md  WHITEBOARD.md  WHY_DRIFTLINE.md  WHY_NOT_ALERTS.md  comparisons.md  design-notes.md  essay.md  guarantees.md  sequence.md
scripts/: create_tables.py  run_scheduler.py
tests/: config.yaml  conftest.py  test_explanation_idempotency.py  test_explanation_regeneration.py  test_snapshot_invariants.py  test_usage_limits.py
(+80 files in other folders)
