[project]
name = "driftline"
version = "0.1.0"
description = "Vision drift detection for software projects"
authors = [
    { name = "C-X1an" }
]
requires-python = ">=3.10"

dependencies = [
    "annotated-types",
    "anyio",
    "certifi",
    "click",
    "colorama",
    "distro",
    "gitdb",
    "GitPython",
    "greenlet",
    "h11",
    "httpcore",
    "httpx",
    "idna",
    "jiter",
    "markdown-it-py",
    "mdurl",
    "openai",
    "pydantic",
    "Pygments",
    "python-dotenv",
    "rich",
    "shellingham",
    "smmap",
    "sniffio",
    "SQLAlchemy",
    "tqdm",
    "typer",
    "typing_extensions"
]

[project.scripts]
driftline = "cli.main:app"

[tool.setuptools]
packages = ["cli", "core"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"